--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Student ID is required">
-						<input class="input100" type="password" id="student-id" placeholder="Student ID">
+						<input class="input100" type="text" id="student-id" placeholder="Student ID">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-id-badge" aria-hidden="true"></i>
