--- a/quiz.html
+++ b/quiz.html
@@ -44,15 +44,30 @@
         .answers button:hover {
             background: #fad0c4;
         }
+        .progress-bar-container {
+            width: 100%;
+            background-color: #e0e0e0;
+            border-radius: 5px;
+            margin: 20px 0;
+        }
+        .progress-bar {
+            height: 10px;
+            background-color: #76c7c0;
+            border-radius: 5px;
+            transition: width 0.1s linear;
+        }
     </style>
 </head>
 <body>
     <div class="quiz-container">
         <div id="quiz-content">
             <div class="question" id="question">Loading...</div>
+            <div class="progress-bar-container">
+                <div class="progress-bar" id="progress-bar"></div>
+            </div>
             <div class="answers" id="answers"></div>
         </div>
     </div>
-    <script src="js/quizz.js"></script>
+    <script src="js/quiz.js"></script>
 </body>
 </html>
