--- a/quiz.html
+++ b/quiz.html
@@ -68,6 +68,6 @@
             <div class="answers" id="answers"></div>
         </div>
     </div>
-    <script src="js/quiz.js"></script>
+    <script src="js/quizz.js"></script>
 </body>
 </html>
